--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 after_script:
  - curl -LO https://raw.github.com/stephanmg/travis-dependent-builds/master/trigger.sh; 
  - chmod +x trigger.sh
- - ./trigger.sh stephanmg downstream-project-test master $TRAVIS_ACCESS_TOKEN  ""
+ - ./trigger.sh NeuroBox3D VRL-NeuroBox-Plugin ci $TRAVIS_ACCESS_TOKEN_NEUROBOX  ""
