--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: false
 dist: trusty
-language: cpp
+#language: cpp
 
 before_script:
  - gem install travis
@@ -10,10 +10,9 @@ before_script:
  #- ughub/ughub install ugcore ConvectionDiffusion LuaShell Neurolucida
  #- mkdir build && cd build && cmake ../ -DTARGET=vrl -DLAPACK=OFF -DBLAS=OFF -DDIM="1;2;3" -DCOMPILE_INFO=OFF -DConvectionDiffusion=ON -DNeurolucida=ON$
  #- travis_wait 800 make
- 
-script:
- 
-after_success:
  - curl -LO https://raw.github.com/stephanmg/travis-dependent-builds/master/trigger.sh; 
  - chmod +x trigger.sh
  - ./trigger.sh NeuroBox3D VRL-NeuroBox-Plugin ci $TRAVIS_ACCESS_TOKEN ""
+ 
+script:
+ -
